--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="card">
         <h1>Special Event</h1>
         <div class="date" id="dateDisplay">Loading...</div>
-        <button class="btn">Check Now</button>
+        <button <a href="https://drive.google.com/file/d/1fErFQ6WyYCpjcf-1RruIqrHY9TRIRsGV/view?usp=drivesdk" class="btn">Check Now</button>
     </div>
 
     <script>
