--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             text-transform: uppercase;
             transition: transform 0.3s, box-shadow 0.3s;
             animation: bounce 2s infinite;
+            text-decoration: none;
         }
 
         .btn:hover {
@@ -116,7 +117,9 @@
     <div class="card">
         <h1>Special Event</h1>
         <div class="date" id="dateDisplay">Loading...</div>
-        <button <a href="https://drive.google.com/file/d/1fErFQ6WyYCpjcf-1RruIqrHY9TRIRsGV/view?usp=drivesdk" class="btn">Check Now</button>
+        <!-- Button with Link -->
+        <a href="https://drive.google.com/file/d/1fErFQ6WyYCpjcf-1RruIqrHY9TRIRsGV/view?usp=drivesdk" 
+           target="_blank" class="btn">Check Now</a>
     </div>
 
     <script>
